--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1017,6 +1017,8 @@ add_library(GPU OBJECT
 	GPU/Null/NullGpu.h
 	GPU/Software/SoftGpu.cpp
 	GPU/Software/SoftGpu.h
+	GPU/Software/TransformUnit.cpp
+	GPU/Software/TransformUnit.h
 	GPU/ge_constants.h)
 setup_target_project(GPU GPU)
 
