--- a/GPU/GPU.vcxproj
+++ b/GPU/GPU.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Math3D.h" />
     <ClInclude Include="Null\NullGpu.h" />
     <ClInclude Include="Software\SoftGpu.h" />
+    <ClInclude Include="Software\TransformUnit.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\ext\xbrz\xbrz.cpp" />
@@ -185,6 +186,7 @@
     <ClCompile Include="Math3D.cpp" />
     <ClCompile Include="Null\NullGpu.cpp" />
     <ClCompile Include="Software\SoftGpu.cpp" />
+    <ClCompile Include="Software\TransformUnit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
