softgpu: Add support for ambient lighting.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1017,6 +1017,8 @@ add_library(GPU OBJECT
 	GPU/Null/NullGpu.h
 	GPU/Software/Clipper.cpp
 	GPU/Software/Clipper.h
+	GPU/Software/Lighting.cpp
+	GPU/Software/Lighting.h
 	GPU/Software/Rasterizer.cpp
 	GPU/Software/Rasterizer.h
 	GPU/Software/SoftGpu.cpp
