--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="StringUtils.h" />
     <ClInclude Include="Swap.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TextTranslationTable.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="ThreadPools.h" />
     <ClInclude Include="Thunk.h" />
@@ -240,6 +241,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="StringUtils.cpp" />
+    <ClCompile Include="TextTranslationTable.cpp" />
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="ThreadPools.cpp" />
     <ClCompile Include="Thunk.cpp" />
