--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -52,7 +52,7 @@ add_subdirectory(../ext/stb_image stb_image)
 
 
 add_executable(atlastool atlastool.cpp)
-target_link_libraries(atlastool ${PNG_LIBRARY} freetype util z image stb_image rg_etc1 file zip gomp)
+target_link_libraries(atlastool ${PNG_LIBRARY} freetype util image z stb_image rg_etc1 file zip gomp)
 
 add_executable(zimtool zimtool.cpp)
-target_link_libraries(zimtool ${PNG_LIBRARY} freetype z image stb_image rg_etc1 file zip gomp)
+target_link_libraries(zimtool ${PNG_LIBRARY} freetype image z stb_image rg_etc1 file zip gomp)
