Fix linkingproblem on OSX missing -framework CoreFundation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -475,6 +475,9 @@ elseif(USING_QT_UI)
 	set(nativeExtra ${nativeExtra} native/base/QtMain.cpp ${nativeQtHeader})
 	set(nativeExtraLibs ${nativeExtraLibs} ${QT_LIBRARIES})
 	set(TargetBin PPSSPPQt)
+	if(APPLE)
+		set(nativeExtraLibs ${nativeExtraLibs} "-framework CoreFoundation")
+	endif()
 elseif(BLACKBERRY)
 	set(nativeExtra ${nativeExtra} native/base/BlackberryMain.cpp native/base/BlackberryDisplay.cpp)
 	set(nativeExtraLibs ${nativeExtraLibs} OpenAL bps screen socket EGL)
